--- a/index.html
+++ b/index.html
@@ -1,55 +1,89 @@
 <!DOCTYPE html>
 <html>
 <body>
-<center><p><b> Kristin Camarena </b><br/> 
+<center><p><h2> Kristin Camarena </h2>
 805-296-0941 <br /> 
 908 36th Ave, Oakland, CA 94601 </br>
 kristin.camarena@gmail.com </center>
 </p>
 <hr>
-<p><b><u>Specialties</u></b><br /> 
-	Operations Management | Financial Management | Quantitative Analysis | Facilities Management | Project Management |<br /> 
-	Laboratory & Office Fit-Up & Move Planning & Execution | Safety Programs | Strong Leadership | Procurement | <br /> Incentive Alignment | Human Resources | Information Technologies | Negotiations | Strategic & Tactical Planning | <br /> Process Development & Improvement | Technical Writing | Laboratory Management | Manufacturing Management | R&D </p>
-
-<p><b><u>Education</u></b><br /> 
-<b>Master of Business Administration, Emphasis: Finance and Analytical Marketing, September 2009-June 2012 </br></b>
-University of California at Davis, Graduate School of Management<br /> 
-Beta Gamma Sigma Membership (Graduated in top 20% of Business School Program)<br /> </br>
-
-<b>Bachelor of Arts, Molecular Cellular & Developmental Biology, September 1998-June 2002 </br></b>
-University of California at Santa Cruz
-Graduated with Honors in Major
-</p>
-
-<p><b><u>Professional Experience</u></b></br>
-<b>Operations Manager/Program Manager 3, Lawrence Berkeley National Laboratory, January 2012-current</b></br>
--Oversee Operations for the Joint Center for Artificial Photosynthesis at the Berkeley, CA site. </b>
--Supervise (direct and matrix) a staff of operations professionals for budget preparation/financial reporting (up to $10.5M/year), facility management, event planning, travel, procurement, safety compliance, IT, and HR. </br>
--Serve as a liaison between LBL Operations and the approximately 100 JCAP researchers consisting of Faculty/PIs, postdoctoral scholars, UCB graduate students, and technical staff from a diverse set of disciplines including chemistry, material science, physics, and engineering.  </br>
--Managed the fit-up and move planning to relocate the JCAP project (which includes $10M in equipment) from South Berkeley to Chu Hall, a $59M UCB building at the LBL campus, in April 2015. </br>
+<p><u><h1>Specialties</h1></u>
+	Operations Management | Financial Management | Quantitative Analysis | Facilities Management | Project Management | 
+	Laboratory & Office Fit-Up & Move Planning & Execution | Safety Programs | Strong Leadership | Procurement | Incentive Alignment | Human Resources | Information Technologies | Negotiations | Strategic & Tactical Planning | Process Development & Improvement | Technical Writing | Laboratory Management | Manufacturing Management | R&D 
 
 </p>
-<p><b>Progentech/GenturaDX (acquired by Luminex in 2012), 2008-2011 </br>
-Pilot Manufacturing Manager, April 2010-April 2011</br>
-R&D Laboratory Manager, June 2008-April 2010</b></br>
--Manufacturing: supervised 6 manufacturing employees in the production of a proprietary integrated purification and PCR molecular diagnostic cassette for research and commercial development. </br>
--Forecasted raw material needs, allocated resources, authored SOPs, implemented procedures, planned production, created bill of materials, and managed schedules for pilot manufacturing plant. </br>
--Oversaw the execution of study plans for product stability, verification, robustness, and trouble-shooting. </br>
--Space planning and move coordination to relocate GenturaDX from Emeryville, CA to Hayward, CA. </br>
--Created and maintained an Access database in lieu of a formal ERP system to track order information for capital purchases and routine expenses. </br>
+
+<p><u><h1>Education</h1></u> 
+		<h3>Master of Business Administration with emphasis in Finance & Analytical Marketing, September 2009-June 2012 </br></h3>
+
+		University of California at Davis, Graduate School of Management<br /> 
+
+		Beta Gamma Sigma Membership (Graduated in top 20% of Business School Program)<br /></br>
+
+		<h3>Bachelor of Arts in Molecular, Cellular, & Developmental Biology, September 1998-June 2002 </h3>
+
+		University of California at Santa Cruz </br>
+
+		Graduated with Honors in Major
+
 </p>
-<p><b>Laboratory Manager, Santa Cruz Biotechnology, 2003-2008 </br>
-Simultaneously managed three groups: Peptide Synthesis Lab, siRNA Synthesis Lab, and Peptide Sequence Design </br>
-siRNA Synthesis Lab Manager, February 2008-June 2008 </br>
-Peptide Sequence Design Group Manager, 2006-June 2008 </br>
-Peptide Synthesis Lab Manager, March 2003-June 2008 </br>
-Peptide Antibody Production Research Assistant, December 2002-March 2003 </br></b>
--siRNA Synthesis: managed a group of 5-7 researchers in automated synthesis of approximately 1,000 synthetic RNA molecules per week in a sterile, RNase free environment.   </br>
--Peptide Sequence Design: managed a group of 3-4 research designers that created unique peptide sequences using NCBI databases and proprietary company criteria.  </br>
--Peptide Synthesis: managed a group of 8-10 researchers in the process of automated synthesis, purification, and analysis of over 17,000 peptides annually in a seven day per week operation.   </br>
--Worked closely with the purchasing department to evaluate vendors, provided an annual forecast for raw material needs, and controlled the inventory for the two high-production laboratories under my management.  </br>
--Oversaw the design and successful synthesis of peptides representing all protein-encoding genes of human Chromosome 21.
--Designed FileMaker Pro databases, reduced hazardous waste production, and optimized processes that created a yearly operating savings of $250K.  </br>
--Key founding member of the company Google Search Engine Optimization team.  </br>
-Assisted with space planning and move coordination to relocate the Peptide Synthesis Lab and siRNA Synthesis Lab from Santa Cruz, CA to Paso Robles </br>
+
+<p><u><h1>Professional Experience</h1></u>
+
+	<h2>Lawrence Berkeley National Laboratory, January 2012-current</h2> 
+
+		<h3>Operations Manager/Program Manager 3</h3>
+
+		Oversee Operations for the Joint Center for Artificial Photosynthesis at the Berkeley, CA site. </br></br>
+
+		Supervise (direct and matrix) a staff of operations professionals for budget preparation/financial reporting (up to $10.5M/year), facility management, event planning, travel, procurement, safety compliance, IT, and HR. </br></br>
+
+		Serve as a liaison between LBL Operations and the approximately 100 JCAP researchers consisting of Faculty/PIs, postdoctoral scholars, UCB graduate students, and technical staff from a diverse set of disciplines including chemistry, material science, physics, and engineering.  </br></br>
+
+		Managed the fit-up and move planning to relocate the JCAP project (which includes $10M in equipment) from South Berkeley to Chu Hall, a $59M UCB building at the LBL campus, in April 2015. </br>
+
+
+	<h2>Progentech/GenturaDX (acquired by Luminex in 2012), 2008-2011</h2>
+
+		<h3>Pilot Manufacturing Manager, April 2010-April 2011</br>
+		R&D Laboratory Manager, June 2008-April 2011</b></h3>
+	
+		Supervised 6 manufacturing employees in the production of a proprietary integrated purification and PCR molecular diagnostic cassette for research and commercial development. </br></br>
+
+		Forecasted raw material needs, allocated resources, authored SOPs, implemented procedures, planned production, created bill of materials, and managed schedules for pilot manufacturing plant. </br></br>
+
+		Oversaw the execution of study plans for product stability, verification, robustness, and trouble-shooting. </br></br>
+
+		Space planning and move coordination to relocate GenturaDX from Emeryville, CA to Hayward, CA. </br></br>
+
+		Created and maintained an Access database in lieu of a formal ERP system to track order information for capital purchases and routine expenses. </br></br>
+
+	<h2>Santa Cruz Biotechnology, 2002-2008 </h2>
+
+		<h3>siRNA Synthesis Lab Manager, February 2008-June 2008 </h3>
+
+		Managed a group of 5-7 researchers in automated synthesis of approximately 1,000 synthetic RNA molecules per week in a sterile, RNase free environment. 
+
+		<h3>Peptide Sequence Design Group Manager, 2006-June 2008 </h3>
+
+		Managed a group of 3-4 research designers that created unique peptide sequences using NCBI databases and proprietary company criteria. 
+
+		<h3>Peptide Synthesis Lab Manager, March 2003-June 2008 </h3>
+
+		Managed a group of 8-10 researchers in the process of automated synthesis, purification, and analysis of over 17,000 peptides annually in a seven day per week operation. </br></br>
+
+		Worked closely with the purchasing department to evaluate vendors, provided an annual forecast for raw material needs, and controlled the inventory for the two high-production laboratories under my management. </br></br>
+
+		Oversaw the design and successful synthesis of peptides representing all protein-encoding genes of human Chromosome 21.</br></br>
+
+		Designed FileMaker Pro databases, reduced hazardous waste production, and optimized processes that created a yearly operating savings of $250K. </br></br>
+		
+		Key founding member of the company Google Search Engine Optimization team. </br></br>
+
+		Assisted with space planning and move coordination to relocate the Peptide Synthesis Lab and siRNA Synthesis Lab from Santa Cruz, CA to Paso Robles. 
+
+		<h3>Peptide Antibody Production Research Assistant, December 2002-March 2003 </h3>
+
+		Purified, analyzed, and packaged resesarch antibodies derived from goat and rabbit sera. 
+
 </p>
