--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
-<center><p><h2> Kristin Camarena </h2>
-805-296-0941 <br /> 
-908 36th Ave, Oakland, CA 94601 </br>
-kristin.camarena@gmail.com </center>
+<center>
+<p>
+	<h2> Kristin Anne Camarena </h2>
+	<img src="KristinCamarenaPicture.jpg" width ="201" height="206"></br><!--Original picture dimensions are 669 × 687-->
+
+		(805) 296-0941 <br /> 
+		Kristin.Camarena@gmail.com </br>
+		908 36th Ave, Oakland, CA 94601 </br>
+ </center>
 </p>
+
 <hr>
+
 <p><u><h1>Specialties</h1></u>
 	Operations Management | Financial Management | Quantitative Analysis | Facilities Management | Project Management | 
 	Laboratory & Office Fit-Up & Move Planning & Execution | Safety Programs | Strong Leadership | Procurement | Incentive Alignment | Human Resources | Information Technologies | Negotiations | Strategic & Tactical Planning | Process Development & Improvement | Technical Writing | Laboratory Management | Manufacturing Management | R&D 
