Resume with formatting, headers, picture, and lists.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <center>
 <p>
 	<h2> Kristin Anne Camarena </h2>
-	<img src="KristinCamarenaPicture.jpg" width ="201" height="206"></br><!--Original picture dimensions are 669 × 687-->
-
+	<img src="KristinCamarenaPicture.jpg" width ="201" height="206"></br><!--Professional picture of Kristin Camarena--Original picture dimensions are 669 × 687-->
+	<address>
 		(805) 296-0941 <br /> 
 		Kristin.Camarena@gmail.com </br>
 		908 36th Ave, Oakland, CA 94601 </br>
+	</address>
  </center>
 </p>
 
@@ -17,7 +18,6 @@
 <p><u><h1>Specialties</h1></u>
 	Operations Management | Financial Management | Quantitative Analysis | Facilities Management | Project Management | 
 	Laboratory & Office Fit-Up & Move Planning & Execution | Safety Programs | Strong Leadership | Procurement | Incentive Alignment | Human Resources | Information Technologies | Negotiations | Strategic & Tactical Planning | Process Development & Improvement | Technical Writing | Laboratory Management | Manufacturing Management | R&D 
-
 </p>
 
 <p><u><h1>Education</h1></u> 
@@ -25,7 +25,7 @@
 
 		University of California at Davis, Graduate School of Management<br /> 
 
-		Beta Gamma Sigma Membership (Graduated in top 20% of Business School Program)<br /></br>
+		Beta Gamma Sigma Membership (graduated in top 20% of business school class)<br /></br>
 
 		<h3>Bachelor of Arts in Molecular, Cellular, & Developmental Biology, September 1998-June 2002 </h3>
 
@@ -38,32 +38,40 @@
 <p><u><h1>Professional Experience</h1></u>
 
 	<h2>Lawrence Berkeley National Laboratory, January 2012-current</h2> 
+	
 
 		<h3>Operations Manager/Program Manager 3</h3>
+		
+		<uL>
 
-		Oversee Operations for the Joint Center for Artificial Photosynthesis at the Berkeley, CA site. </br></br>
+		<li>Oversee Operations for the Joint Center for Artificial Photosynthesis at the Berkeley, CA site. </li>
 
-		Supervise (direct and matrix) a staff of operations professionals for budget preparation/financial reporting (up to $10.5M/year), facility management, event planning, travel, procurement, safety compliance, IT, and HR. </br></br>
+		<li>Supervise (direct and matrix) a staff of operations professionals for budget preparation/financial reporting (up to $10.5M/year), facility management, event planning, travel, procurement, safety compliance, IT, and HR. </li>
 
-		Serve as a liaison between LBL Operations and the approximately 100 JCAP researchers consisting of Faculty/PIs, postdoctoral scholars, UCB graduate students, and technical staff from a diverse set of disciplines including chemistry, material science, physics, and engineering.  </br></br>
+		<li>Serve as a liaison between LBL Operations and the approximately 100 JCAP researchers consisting of Faculty/PIs, postdoctoral scholars, UCB graduate students, and technical staff from a diverse set of disciplines including chemistry, material science, physics, and engineering.  </li>
 
-		Managed the fit-up and move planning to relocate the JCAP project (which includes $10M in equipment) from South Berkeley to Chu Hall, a $59M UCB building at the LBL campus, in April 2015. </br>
+		<li>Managed the fit-up and move planning to relocate the JCAP project (which includes $10M in equipment) from South Berkeley to Chu Hall, a $59M UCB building at the LBL campus, in April 2015. </li>
 
+		</uL>
 
 	<h2>Progentech/GenturaDX (acquired by Luminex in 2012), 2008-2011</h2>
 
 		<h3>Pilot Manufacturing Manager, April 2010-April 2011</br>
 		R&D Laboratory Manager, June 2008-April 2011</b></h3>
-	
-		Supervised 6 manufacturing employees in the production of a proprietary integrated purification and PCR molecular diagnostic cassette for research and commercial development. </br></br>
+		
+		<ul>
 
-		Forecasted raw material needs, allocated resources, authored SOPs, implemented procedures, planned production, created bill of materials, and managed schedules for pilot manufacturing plant. </br></br>
+		<li>Supervised 6 manufacturing employees in the production of a proprietary integrated purification and PCR molecular diagnostic cassette for research and commercial development. </li>
 
-		Oversaw the execution of study plans for product stability, verification, robustness, and trouble-shooting. </br></br>
+		<li>Forecasted raw material needs, allocated resources, authored SOPs, implemented procedures, planned production, created bill of materials, and managed schedules for pilot manufacturing plant. </li>
 
-		Space planning and move coordination to relocate GenturaDX from Emeryville, CA to Hayward, CA. </br></br>
+		<li>Oversaw the execution of study plans for product stability, verification, robustness, and trouble-shooting. </li>
 
-		Created and maintained an Access database in lieu of a formal ERP system to track order information for capital purchases and routine expenses. </br></br>
+		<li>Space planning and move coordination to relocate GenturaDX from Emeryville, CA to Hayward, CA. </li>
+
+		<li>Created and maintained an Access database in lieu of a formal ERP system to track order information for capital purchases and routine expenses. </li>
+
+		</ul>
 
 	<h2>Santa Cruz Biotechnology, 2002-2008 </h2>
 
@@ -77,17 +85,21 @@
 
 		<h3>Peptide Synthesis Lab Manager, March 2003-June 2008 </h3>
 
-		Managed a group of 8-10 researchers in the process of automated synthesis, purification, and analysis of over 17,000 peptides annually in a seven day per week operation. </br></br>
+		<ul>
 
-		Worked closely with the purchasing department to evaluate vendors, provided an annual forecast for raw material needs, and controlled the inventory for the two high-production laboratories under my management. </br></br>
+		<li>Managed a group of 8-10 researchers in the process of automated synthesis, purification, and analysis of over 17,000 peptides annually in a seven day per week operation. </li>
 
-		Oversaw the design and successful synthesis of peptides representing all protein-encoding genes of human Chromosome 21.</br></br>
+		<li>Worked closely with the purchasing department to evaluate vendors, provided an annual forecast for raw material needs, and controlled the inventory for the two high-production laboratories under my management. </li>
 
-		Designed FileMaker Pro databases, reduced hazardous waste production, and optimized processes that created a yearly operating savings of $250K. </br></br>
+		<li>Oversaw the design and successful synthesis of peptides representing all protein-encoding genes of human Chromosome 21.</li>
+
+		<li>Designed FileMaker Pro databases, reduced hazardous waste production, and optimized processes that created a yearly operating savings of $250K. </li>
 		
-		Key founding member of the company Google Search Engine Optimization team. </br></br>
+		<li>Key founding member of the company Google Search Engine Optimization team. </li>
 
-		Assisted with space planning and move coordination to relocate the Peptide Synthesis Lab and siRNA Synthesis Lab from Santa Cruz, CA to Paso Robles. 
+		<li>Assisted with space planning and move coordination to relocate the Peptide Synthesis Lab and siRNA Synthesis Lab from Santa Cruz, CA to Paso Robles. </li>
+
+		</ul>
 
 		<h3>Peptide Antibody Production Research Assistant, December 2002-March 2003 </h3>
 
