Resume with formatting, headers, picture, lists, and UC Berkeley extension update—fixed typo in “Specialities” section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <section>
 <u><h1>Specialties</h1></u>
 	Operations Management | Financial Management | Quantitative Analysis | Facilities Management | Project Management | 
-	Laboratory & Office Fit-Up & Move Planning & Execution | Safety Programs | Strong Leadership | Procurement | Incentive Alignment | Human Resources | Information Technologies | Negotiations | Strategic & Tactical Planning | Process Development & Improvement | Technical Writing | Laboratory Management | Manufacturing Management | R&D 
+	Laboratory & Office Fit-Up | Move Planning & Execution | Safety Programs | Strong Leadership | Procurement | Incentive Alignment | Human Resources | Information Technologies | Negotiations | Strategic & Tactical Planning | Process Development & Improvement | Technical Writing | Laboratory Management | Manufacturing Management | R&D 
 </section>
 
 <section>
