Resume with formatting, headers, picture, lists, and UC Berkeley extension update—fixed typo in “Specialities” section & “years”

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</ul>
 	</p>
 	<p>
-		<h2>Santa Cruz Biotechnology, 2002-2008 (5 yrs)</h2>
+		<h2>Santa Cruz Biotechnology, 2002-2008 (5 years)</h2>
 
 			<h3>siRNA Synthesis Lab Manager, February 2008-June 2008 </h3>
 
