Resume-added meta information

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="description" content="Kristin Camarena Resume">
+	<meta name="keywords" content="MBA,UC,Oakland,Operations,Operation,Management,Financial,Quantitative,Analysis,Facilities,Facility,Project,PM,Laboratory,Office,Fit-Up,Move,Planning,Safety,Leadership,Procurement,Incentive,Alignment,Human,Resources,HR,Information,Technologies,IT,Negotiations,Strategic,Tactical,Planning,Process,Development,Improvement,Technical,Writing,Manufacturing,R&D,Research,Development">
+	<meta name="author" content="Kristin Camarena">
+</head>
 <body>
 <center>
 <section>
@@ -84,3 +89,4 @@
 				Purified, analyzed, and packaged resesarch antibodies derived from goat and rabbit sera. 
 	</p>
 </section>
+</html>
