--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="description" content="Kristin Camarena Resume">
 	<meta name="keywords" content="MBA,UC,Oakland,Operations,Operation,Management,Financial,Quantitative,Analysis,Facilities,Facility,Project,PM,Laboratory,Office,Fit-Up,Move,Planning,Safety,Leadership,Procurement,Incentive,Alignment,Human,Resources,HR,Information,Technologies,IT,Negotiations,Strategic,Tactical,Planning,Process,Development,Improvement,Technical,Writing,Manufacturing,R&D,Research,Development">
 	<meta name="author" content="Kristin Camarena">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="CSS resume.css"/>
 </head>
 <body>
@@ -11,16 +12,15 @@
 	<h1> Kristin Anne Camarena</h1>
 	<img src="KristinCamarenaPicture.jpg" width ="201" height="206"></br><!--Professional picture of Kristin Camarena--Original picture dimensions are 669 × 687-->
 	<address>
-		(805) 296-0941 <br /> 
+		<h3>(805) 296-0941 <br /> 
 		Kristin.Camarena@gmail.com </br>
-		908 36th Ave, Oakland, CA 94601 </br>
+		908 36th Ave, Oakland, CA 94601 </h3>
 	</address>
  </center>
 </section>
 <section>
 <h1>Specialties</h1>
-	Operations Management | Financial Management | Quantitative Analysis | Facilities Management | Project Management | 
-	Laboratory & Office Fit-Up | Move Planning & Execution | Safety Programs | Strong Leadership | Procurement | Incentive Alignment | Human Resources | Information Technologies | Negotiations | Strategic & Tactical Planning | Process Development & Improvement | Technical Writing | Laboratory Management | Manufacturing Management | R&D 
+	<p id="Specialties">Operations Management | Financial Management | Quantitative Analysis | Facilities Management | Project Management | Laboratory & Office Fit-Up | Move Planning & Execution | Safety Programs | Strong Leadership | Procurement | Incentive Alignment | Human Resources | Information Technologies | Negotiations | Strategic & Tactical Planning | Process Development & Improvement | Technical Writing | Laboratory Management | Manufacturing Management | R&D </p>
 </section>
 
 <section>
@@ -35,7 +35,7 @@
 			<h3>University of California at Santa Cruz</h3>
 				<h4>Bachelor of Arts in Molecular, Cellular, & Developmental Biology</h4>
 				<h4>Graduated with Honors in Major</h4>
-				<h4>September 1998-June 2002 <h4>
+				<h4>September 1998-June 2002 </h4>
 </section>
 <section>
 	<h1>Professional Experience</h1>
@@ -61,9 +61,9 @@
 	<p>
 		<h2>Santa Cruz Biotechnology, 2002-2008 (5 years)</h2>
 			<h3>siRNA Synthesis Lab Manager, February 2008-June 2008 </h3>
-				<h4>Managed a group of 5-7 researchers in automated synthesis of approximately 1,000 synthetic RNA molecules per week in a sterile, RNase free environment. </h4>
+				<h4>Managed a group of 5-7 researchers in automated synthesis of approximately 1,000 synthetic RNA molecules per week in a sterile, RNase free environment.</h4>
 			<h3>Peptide Sequence Design Group Manager, May 2006-June 2008 </h3>
-				<h4>Managed a group of 3-4 research designers that created unique peptide sequences using NCBI databases and proprietary company criteria. <h4>
+				<h4>Managed a group of 3-4 research designers that created unique peptide sequences using NCBI databases and proprietary company criteria. </h4>
 			<h3>Peptide Synthesis Lab Manager, March 2003-June 2008 </h3>
 				<h4>Managed a group of 8-10 researchers in the process of automated synthesis, purification, and analysis of over 17,000 peptides annually in a seven day per week operation. </h4>
 				<h4>Worked closely with the purchasing department to evaluate vendors, provided an annual forecast for raw material needs, and controlled the inventory for the two high-production laboratories under my management. </h4>
