--- a/Final Submission (Class 10)/index.html
+++ b/Final Submission (Class 10)/index.html
@@ -115,24 +115,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Sun2Chem Beachwear</a>
+      <a class="navbar-brand" href="http://sun2chem.org">Sun2Chem Beachwear</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="http://ferndak.com/">Ferndak Visual Arts<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="https://s3-us-west-1.amazonaws.com/sun2chem.org/resume.html">Kristin Camarena Resume<span class="sr-only">(current)</span></a></li>
         <li><a href="http://34.197.67.161">Camarena Website Development</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
           
-            <li><a href="http://ferndak.com/">Ferndak Visual Arts</a></li>
+            <li><a href="https://s3-us-west-1.amazonaws.com/sun2chem.org/resume.html">Kristin Camarena Resume</a></li>
             <li><a href="http://34.197.67.161">Camarena Website Development</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="http://solarfuelshub.org/">JCAP</a></li>
+            <li><a href="http://Ferndak.com">Ferndak Visual Artist</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="http://solarfuelshub.org/operations-administration">JCAP Operations</a></li>
+            <li><a href="http://solarfuelshub.org/">JCAP</a></li>
           </ul>
         </li>
       </ul>
